frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: registry.reset.inso-w.at/2023ws-ase-pr-group/23ws-ase-pr-inso-04/frontend:latest
          resources:
            requests:
              memory: "500Mi"
              cpu: "100m"
              ephemeral-storage: "50Mi"
            limits:
              memory: "1000Mi"
              cpu: "200m"
              ephemeral-storage: "100Mi"

          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: secret-dockercfg
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
