gameserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameserver-service
spec:
  selector:
    app: gameserver
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameserver-deployment
spec:
  selector:
    matchLabels:
      app: gameserver
  replicas: 1
  template:
    metadata:
      labels:
        app: gameserver
    spec:
      containers:
        - name: gameserver
          image: registry.reset.inso-w.at/2023ws-ase-pr-group/23ws-ase-pr-inso-04/gameserver:latest
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
              ephemeral-storage: "50Mi"
            limits:
              memory: "1000Mi"
              cpu: "400m"
              ephemeral-storage: "100Mi"

          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: secret-dockercfg
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
