management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: management-service
spec:
  selector:
    app: management
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: management-deployment
spec:
  selector:
    matchLabels:
      app: management
  replicas: 1
  template:
    metadata:
      labels:
        app: management
    spec:
      containers:
        - name: management
          image: registry.reset.inso-w.at/2023ws-ase-pr-group/23ws-ase-pr-inso-04/management:latest
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
              ephemeral-storage: "150Mi"
            limits:
              memory: "1000Mi"
              cpu: "400m"
              ephemeral-storage: "400Mi"

          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: secret-dockercfg
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
